@@ -32,6 +32,9 @@
 #include <ctype.h>
 #include "run.h"
 
+#include <Startup.h> /* for CharacterMode and RGui */
+extern UImode  CharacterMode;
+
 static char RunError[501] = "";
 
 
@@ -114,6 +117,7 @@ static char *expandcmd(const char *cmd)
      redirect stdin for the child.
    newconsole != 0 to use a new console (if not waiting)
    visible = -1, 0, 1 for hide, minimized, default
+   inpipe != 0 to duplicate I/O handles
    pi is set based on the newly created process,
    with the hThread handle closed.
 */
@@ -130,6 +134,7 @@ static void pcreate(const char* cmd, cetype_t enc,
     STARTUPINFOW wsi;
     HANDLE dupIN, dupOUT, dupERR;
     WORD showWindow = SW_SHOWDEFAULT;
+    int inpipe;
     char *ecmd;
     SECURITY_ATTRIBUTES sa;
     sa.nLength = sizeof(sa);
@@ -139,22 +144,28 @@ static void pcreate(const char* cmd, cetype_t enc,
     /* FIXME: this might need to be done in wchar_t */
     if (!(ecmd = expandcmd(cmd))) return; /* error message already set */
 
-    HANDLE hNULL = CreateFile("NUL:", GENERIC_READ | GENERIC_WRITE, 0,
-			      &sa, OPEN_EXISTING, 0, NULL);
-    HANDLE hTHIS = GetCurrentProcess();
+    inpipe = (hIN != INVALID_HANDLE_VALUE)
+	|| (hOUT != INVALID_HANDLE_VALUE)
+	|| (hERR != INVALID_HANDLE_VALUE);
 
-    if (hIN == INVALID_HANDLE_VALUE) hIN = hNULL;
-    if (hOUT == INVALID_HANDLE_VALUE) hOUT = hNULL;
-    if (hERR == INVALID_HANDLE_VALUE) hERR = hNULL;
-    
-    DuplicateHandle(hTHIS, hIN,
-		    hTHIS, &dupIN, 0, TRUE, DUPLICATE_SAME_ACCESS);
-    DuplicateHandle(hTHIS, hOUT,
-		    hTHIS, &dupOUT, 0, TRUE, DUPLICATE_SAME_ACCESS);
-    DuplicateHandle(hTHIS, hERR,
-		    hTHIS, &dupERR, 0, TRUE, DUPLICATE_SAME_ACCESS);
-    CloseHandle(hTHIS);
-    CloseHandle(hNULL);
+    if (inpipe) {
+	HANDLE hNULL = CreateFile("NUL:", GENERIC_READ | GENERIC_WRITE, 0,
+			   &sa, OPEN_EXISTING, 0, NULL);
+	HANDLE hTHIS = GetCurrentProcess();
+
+	if (hIN == INVALID_HANDLE_VALUE) hIN = hNULL;
+	if (hOUT == INVALID_HANDLE_VALUE) hOUT = hNULL;
+	if (hERR == INVALID_HANDLE_VALUE) hERR = hNULL;
+
+	DuplicateHandle(hTHIS, hIN,
+			hTHIS, &dupIN, 0, TRUE, DUPLICATE_SAME_ACCESS);
+	DuplicateHandle(hTHIS, hOUT,
+			hTHIS, &dupOUT, 0, TRUE, DUPLICATE_SAME_ACCESS);
+	DuplicateHandle(hTHIS, hERR,
+			hTHIS, &dupERR, 0, TRUE, DUPLICATE_SAME_ACCESS);
+	CloseHandle(hTHIS);
+	CloseHandle(hNULL);
+    }
 
     switch (visible) {
     case -1:
@@ -174,10 +185,12 @@ static void pcreate(const char* cmd, cetype_t enc,
 	wsi.lpTitle = NULL;
 	wsi.dwFlags = STARTF_USESHOWWINDOW;
 	wsi.wShowWindow = showWindow;
-	wsi.dwFlags |= STARTF_USESTDHANDLES;
-	wsi.hStdInput  = dupIN;
-	wsi.hStdOutput = dupOUT;
-	wsi.hStdError  = dupERR;
+	if (inpipe) {
+	    wsi.dwFlags |= STARTF_USESTDHANDLES;
+	    wsi.hStdInput  = dupIN;
+	    wsi.hStdOutput = dupOUT;
+	    wsi.hStdError  = dupERR;
+	}
     } else {
 	si.cb = sizeof(si);
 	si.lpReserved = NULL;
@@ -187,10 +200,12 @@ static void pcreate(const char* cmd, cetype_t enc,
 	si.lpTitle = NULL;
 	si.dwFlags = STARTF_USESHOWWINDOW;
 	si.wShowWindow = showWindow;
-	si.dwFlags |= STARTF_USESTDHANDLES;
-	si.hStdInput  = dupIN;
-	si.hStdOutput = dupOUT;
-	si.hStdError  = dupERR;
+	if (inpipe) {
+	    si.dwFlags |= STARTF_USESTDHANDLES;
+	    si.hStdInput  = dupIN;
+	    si.hStdOutput = dupOUT;
+	    si.hStdError  = dupERR;
+	}
     }
 
     if(enc == CE_UTF8) {
@@ -207,10 +222,11 @@ static void pcreate(const char* cmd, cetype_t enc,
 			    CREATE_NEW_CONSOLE : 0,
 			    NULL, NULL, &si, pi);
 
-    CloseHandle(dupIN);
-    CloseHandle(dupOUT);
-    CloseHandle(dupERR);
-
+    if (inpipe) {
+	CloseHandle(dupIN);
+	CloseHandle(dupOUT);
+	CloseHandle(dupERR);
+    }
     if (!ret)
 	snprintf(RunError, 500, _("CreateProcess failed to run '%s'"), ecmd);
     else CloseHandle(pi->hThread);
@@ -262,7 +278,8 @@ static HANDLE getInputHandle(const char *fin)
 	    return NULL;
 	}
 	return hIN;
-    }
+    } else if (fin && CharacterMode != RGui)
+    	return GetStdHandle(STD_INPUT_HANDLE);
     return INVALID_HANDLE_VALUE;
 }
 
@@ -339,7 +356,9 @@ int runcmd(const char *cmd, cetype_t enc, int wait, int visible,
     HANDLE hIN = getInputHandle(fin), hOUT, hERR;
     int ret = 0;
     PROCESS_INFORMATION pi;
-    int close2 = 0, close3 = 0;
+    int close1 = 0, close2 = 0, close3 = 0;
+    
+    if (hIN && fin && fin[0]) close1 = 1;
 
     hOUT = getOutputHandle(fout, 0);
     if (!hOUT) return 1;
@@ -367,7 +386,7 @@ int runcmd(const char *cmd, cetype_t enc, int wait, int visible,
 	ret &= 0xffff;
     } else ret = 0;
     CloseHandle(pi.hProcess);
-    if (hIN != INVALID_HANDLE_VALUE) CloseHandle(hIN);
+    if (close1) CloseHandle(hIN);
     if (close2) CloseHandle(hOUT);
     if (close3) CloseHandle(hERR);
     return ret;
@@ -389,7 +408,7 @@ rpipe * rpipeOpen(const char *cmd, cetype_t enc, int visible,
     HANDLE hTHIS, hIN, hOUT, hERR, hReadPipe, hWritePipe;
     DWORD id;
     BOOL res;
-    int close2 = 0, close3 = 0;
+    int close1 = 0, close2 = 0, close3 = 0;
 
     if (!(r = (rpipe *) malloc(sizeof(struct structRPIPE)))) {
 	strcpy(RunError, _("Insufficient memory (rpipeOpen)"));
@@ -428,6 +447,9 @@ rpipe * rpipeOpen(const char *cmd, cetype_t enc, int visible,
     CloseHandle(hTHIS);
 
     hIN = getInputHandle(finput); /* a file or (usually NUL:) */
+    
+    if (hIN && finput && finput[0]) close1 = 1;
+    
     if ((io == 0 || io == 3)) 
 	hOUT = r->write;
     else {
@@ -441,7 +463,7 @@ rpipe * rpipeOpen(const char *cmd, cetype_t enc, int visible,
 	hERR = getOutputHandle(ferr, 1);
     }
     pcreate(cmd, enc, 0, visible, hIN, hOUT, hERR, &(r->pi));
-    if (hIN != INVALID_HANDLE_VALUE) CloseHandle(hIN);
+    if (close1) CloseHandle(hIN);
     if (close2) CloseHandle(hOUT);
     if (close3) CloseHandle(hERR);
 
